<resources>
    <string name="app_name">Capstone Project</string>
    <string name="title_favorite">Favorites</string>
    <string name="email">Email</string>
    <string name="email_hint">example@example.com</string>
    <string name="password">Password</string>
    <string name="hint_password">8+ Characters</string>
    <string name="login">Login</string>
    <string name="or">OR</string>
    <string name="login_with_gogle">Sign in With Google</string>
    <string name="no_account_question">Don\'t Have Account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="creating_account_policy">Creating an account means you\'re okay with our Terms of Service and our Privacy Policy</string>
    <string name="hint_confirm_password">Confirm Your Password</string>
    <string name="create_account">Create An Account</string>
    <string name="email_verification">Email Verification</string>
    <string name="check_your_email_and_verify">Check your email and verify</string>
    <string name="next">Next</string>
    <string name="email_not_valid">Email not valid</string>
    <string name="password_length_less_than_8">password length less than 8</string>
    <string name="confirm_password_not_valid">Password is not the same or length is less than 8</string>
    <string name="register_here">Register here</string>
    <string name="google_sign_in_failed">Google Sign in Failed</string>
    <string name="server_client_id">910696638579-svhrpo1i8qi9lpspgj493q5g1ftu9g85.apps.googleusercontent.com</string>
    <string name="server_client_secret">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</string>
    <string name="email_not_verify">Email not verified, please check your email</string>
    <string name="search_movie">Search Movie..</string>
    <string name="search_tvshow">Search Tv Show..</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="find_movie_you_want">Find Movie You Want</string>
    <string name="find_tvshow_you_want">Find Tv Show You Want</string>
    <string name="popular">Popular</string>
    <string name="see_more">See more</string>
    <string name="movie">Movie</string>
    <string name="tv_show">Tv Show</string>
    <string name="favorite">Favorite</string>
    <string name="now_playing_movie">Now Playing</string>
    <string name="airing_today">Airing Today</string>
    <string name="up_coming_movie">Up Coming</string>
    <string name="top_rate_tvshow">Top Rate</string>
    <string name="genre">Genre</string>
    <string name="overview">Overview</string>
    <string name="top_billed_cast">Top Billed Cast</string>
    <string name="remove_favorite">%s removed from favorite</string>
    <string name="add_favorite">%s added to favorite</string>
    <string name="title_userprofile">User Profile</string>
    <string name="profile">Profile</string>
    <string name="change_language">Change Language</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
</resources>