<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.signup.SignUpActivity">

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_32"
        android:layout_marginTop="@dimen/dp_32"
        android:layout_marginEnd="@dimen/dp_16"
        android:background="@drawable/ic_baseline_arrow_back_sign_up"
        app:layout_constraintEnd_toStartOf="@id/text_view_sign_up"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/text_view_sign_up"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/sign_up"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/sp_32"
        app:layout_constraintBottom_toBottomOf="@id/btn_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_back"
        app:layout_constraintTop_toTopOf="@id/btn_back" />

    <TextView
        android:id="@+id/text_view_email"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_32"
        android:layout_marginTop="@dimen/dp_24"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_sign_up" />

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_32"
        android:layout_marginTop="@dimen/dp_8"
        android:background="@drawable/rounded_text"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:padding="@dimen/dp_16"
        android:fontFamily="@font/poppins_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_email"
        tools:ignore="Autofill,HardcodedText,LabelFor" />

    <TextView
        android:id="@+id/text_view_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_32"
        android:layout_marginTop="@dimen/dp_16"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_email" />

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_32"
        android:layout_marginTop="@dimen/dp_8"
        android:background="@drawable/rounded_text"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:padding="@dimen/dp_16"
        android:fontFamily="@font/poppins_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_password"
        tools:ignore="Autofill,HardcodedText,LabelFor" />

    <TextView
        android:id="@+id/text_view_confirm_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_32"
        android:layout_marginTop="@dimen/dp_16"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_password" />

    <EditText
        android:id="@+id/edt_confirm_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_32"
        android:layout_marginTop="@dimen/dp_8"
        android:background="@drawable/rounded_text"
        android:hint="@string/hint_confirm_password"
        android:inputType="textPassword"
        android:padding="@dimen/dp_16"
        android:fontFamily="@font/poppins_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_confirm_password"
        tools:ignore="Autofill,HardcodedText,LabelFor" />

    <TextView
        android:id="@+id/text_view_creating_account"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_32"
        android:layout_marginTop="@dimen/dp_32"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/creating_account_policy"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_confirm_password" />

    <Button
        android:id="@+id/btn_create_account"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_32"
        android:layout_marginTop="@dimen/dp_32"
        android:background="@drawable/bg_btn_black"
        android:enabled="false"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/create_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_creating_account" />

    <include
        android:id="@+id/loading"
        layout="@layout/loading_auth"
        android:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>