<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity"
    android:background="@color/white">
    
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3"/>

    <ImageView
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:src="@drawable/tmdb"
        android:layout_marginHorizontal="@dimen/dp_16"
        android:layout_marginBottom="@dimen/dp_8"
        app:layout_constraintBottom_toBottomOf="@id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="ContentDescription"/>

    <TextView
        android:id="@+id/text_view_email"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:fontFamily="@font/poppins_regular"
        android:layout_marginHorizontal="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_8"
        app:layout_constraintTop_toBottomOf="@id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        android:background="@drawable/rounded_text"
        android:inputType="textEmailAddress"
        android:fontFamily="@font/poppins_regular"
        android:padding="@dimen/dp_16"
        android:hint="@string/email_hint"
        android:layout_marginHorizontal="@dimen/dp_16"
        app:layout_constraintTop_toBottomOf="@id/text_view_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="Autofill,HardcodedText,LabelFor" />

    <TextView
        android:id="@+id/text_view_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/password"
        android:layout_marginHorizontal="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        app:layout_constraintTop_toBottomOf="@id/edt_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        android:background="@drawable/rounded_text"
        android:padding="@dimen/dp_16"
        android:fontFamily="@font/poppins_regular"
        android:layout_marginHorizontal="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_8"
        app:layout_constraintTop_toBottomOf="@id/text_view_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="Autofill,HardcodedText,LabelFor"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_btn_black"
        android:fontFamily="@font/poppins_semibold"
        android:textAllCaps="false"
        android:layout_marginHorizontal="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_32"
        android:text="@string/login"
        android:enabled="false"
        app:layout_constraintTop_toBottomOf="@id/edt_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/text_view_or"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:fontFamily="@font/poppins_semibold"
        android:layout_marginTop="@dimen/dp_24"
        android:layout_marginHorizontal="@dimen/dp_16"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/image_view_google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_google_icon"
        android:layout_marginEnd="@dimen/dp_4"
        android:layout_marginTop="@dimen/dp_24"
        app:layout_constraintTop_toBottomOf="@id/text_view_or"
        app:layout_constraintEnd_toStartOf="@id/tv_google_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/tv_google_login"
        app:layout_constraintHorizontal_chainStyle="packed"
        tools:ignore="ContentDescription"/>

    <TextView
        android:id="@+id/tv_google_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/login_with_gogle"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="@dimen/dp_24"
        android:layout_marginStart="@dimen/dp_4"
        app:layout_constraintTop_toBottomOf="@id/text_view_or"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/image_view_google"
        app:layout_constraintBottom_toBottomOf="@id/image_view_google"/>

    <TextView
        android:id="@+id/text_view_no_account_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_4"
        android:layout_marginBottom="@dimen/dp_16"
        android:text="@string/no_account_question"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginStart="@dimen/dp_16"
        app:layout_constraintEnd_toStartOf="@id/tv_register"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"/>

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/register_here"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginBottom="@dimen/dp_16"
        android:layout_marginStart="@dimen/dp_4"
        android:layout_marginEnd="@dimen/dp_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/text_view_no_account_question"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <include
        android:id="@+id/loading"
        layout="@layout/loading_auth"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>